--- a/index.css
+++ b/index.css
@@ -21,65 +21,38 @@ img {
 }
 
 
-/* Geral */
 body {
     font-family: Arial, sans-serif;
 }
 
-header h1 {
-    font-size: 2em;
-    text-align: center;
-    margin: 20px 0;
-}
-
-/* Estilização da navegação */
-.navbar-nav {
-    justify-content: center;
-    width: 100%;
-}
-
-.navbar-nav .nav-item .nav-link {
-    padding: 10px 15px;
-    font-size: 1.1em;
-}
-
-@media (max-width: 992px) {
-    .navbar-toggler {
-        margin: 10px 0;
-    }
-    .navbar-nav {
-        text-align: center;
-    }
-    .navbar-nav .nav-item {
-        margin-bottom: 10px;
-    }
-}
-
-/* Carrossel */
-.container-carousel {
-    margin-top: 20px;
-}
-
-.carousel-inner img {
-    width: 100%;
-    height: auto;
-}
-
-/* Notícias */
-.container h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-}
-
 .card {
-    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    background-color: #f8f9fa;
 }
 
-@media (max-width: 768px) {
-    .card-title {
-        font-size: 1.5em;
+@media (min-width: 1200px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
     }
-    .card-text {
-        font-size: 1em;
+}
+
+@media (min-width: 768px) and (max-width: 1199.98px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
     }
 }
