--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+.container-carousel {
+    padding: 55px;   
+
+}
 img {
     border-radius: 20px;
 }
@@ -82,4 +86,20 @@ header h1 {
     .card-text {
         font-size: 1em;
     }
+}
+
+.container>h1 {
+    cursor: pointer;
+    background-color: rgb(0, 77, 39);
+    border-radius: 7px;
+    color: rgb(255, 255, 255);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    transition: background-color 1s ease;
+    font-size: 50px;
+    bakcground-color: s
+}
+
+.container>h1:hover {
+    background-color: rgb(91, 91, 91);
+    color: black;
 }
