--- a/index.css
+++ b/index.css
@@ -18,11 +18,13 @@ img {
 }
 
 .linha-azul {
-    width: 700px;
+    width: 100%;
+    max-width: 700px; /* Limita a largura em telas grandes */
     height: 2px;
     background-color: rgb(0, 80, 201);
-    margin: 40px;
+    margin: 20px auto;
 }
+
 
 
 /* Geral */
@@ -57,7 +59,28 @@ header h1 {
     .navbar-nav .nav-item {
         margin-bottom: 10px;
     }
+
 }
+.navbar-toggler {
+    margin: 15px auto;
+}
+
+@media (max-width: 576px) {
+    .container h1 {
+        font-size: 1.9em;
+    }
+    .card-title {
+        font-size: 1.2em;
+    }
+    .card-text {
+        font-size: 0.9em;
+    }
+    .linha-azul {
+        width: 100%;
+        margin: 20px auto;
+    }
+}
+
 
 /* Carrossel */
 .container-carousel {
@@ -89,17 +112,26 @@ header h1 {
 }
 
 .container>h1 {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: background-color 1s ease;
+    font-size: 100px;
+    background-color: rgb(47, 47, 47);
+}
+
+header {
     cursor: pointer;
-    background-color: rgb(0, 77, 39);
+    background-color: rgb(59, 59, 59);
     border-radius: 7px;
     color: rgb(255, 255, 255);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    transition: background-color 1s ease;
-    font-size: 50px;
-    bakcground-color: s
 }
 
 .container>h1:hover {
     background-color: rgb(91, 91, 91);
     color: black;
 }
+
+.card img, .carousel-inner img {
+    width: 100%;
+    height: auto;
+}
+
