--- a/index.css
+++ b/index.css
@@ -115,14 +115,16 @@ header h1 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     transition: background-color 1s ease;
     font-size: 100px;
-    background-color: rgb(47, 47, 47);
+    background-color: rgb(143, 143, 143);
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 header {
     cursor: pointer;
-    background-color: rgb(59, 59, 59);
+    background-color: rgb(132, 132, 132);
     border-radius: 7px;
-    color: rgb(255, 255, 255);
+    color: rgb(218, 218, 218);
 }
 
 .container>h1:hover {
